[package]
name = "helius-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cfg-if = "1.0.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
solana-program = "1.17.3"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["full"] }

[features]
dev = []
